src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_nanquantile(value self, value q, value dim, int keepdim, const char * interpolation);
value atg_nanquantile_out(value out, value self, value q, value dim, int keepdim, const char * interpolation);
value atg_nanquantile_scalar(value self, double q, value dim, int keepdim, const char * interpolation);
value atg_nanquantile_scalar_out(value out, value self, double q, value dim, int keepdim, const char * interpolation);
value atg_nansum(value self, value dim, int keepdim, int dtype);
value atg_nansum_out(value out, value self, value dim, int keepdim, int dtype);
value atg_narrow(value self, int64_t dim, int64_t start, int64_t length);
value atg_narrow_copy(value self, int64_t dim, int64_t start, int64_t length);
value atg_narrow_copy_out(value out, value self, int64_t dim, int64_t start, int64_t length);
value atg_narrow_tensor(value self, int64_t dim, value start, int64_t length);
value atg_native_batch_norm(value input, value weight, value bias, value running_mean, value running_var, int training, double momentum, double eps);
value atg_native_batch_norm_out(value out, value save_mean, value save_invstd, value input, value weight, value bias, value running_mean, value running_var, int training, double momentum, double eps);
value atg_native_channel_shuffle(value self, int64_t groups);
value atg_native_dropout(value input, double p, int train);
value atg_native_dropout_backward(value grad_output, value mask, double scale);
value atg_native_dropout_backward_out(value out, value grad_output, value mask, double scale);
value atg_native_dropout_out(value out0, value out1, value input, double p, int train);
value atg_native_group_norm(value input, value weight, value bias, int64_t n, int64_t C, int64_t HxW, int64_t group, double eps);
value atg_native_group_norm_out(value out0, value out1, value out2, value input, value weight, value bias, int64_t n, int64_t C, int64_t HxW, int64_t group, double eps);
value atg_native_layer_norm(value input, value normalized_shape, value weight, value bias, double eps);
value atg_native_layer_norm_out(value out0, value out1, value out2, value input, value normalized_shape, value weight, value bias, double eps);
value atg_native_norm(value self, value p);
value atg_native_norm_out(value out, value self, value p);
value atg_native_norm_scalaropt_dim_dtype(value self, value p, value dim, int keepdim, int dtype);
value atg_native_norm_scalaropt_dim_dtype_out(value out, value self, value p, value dim, int keepdim, int dtype);
value atg_ne(value self, value other);
value atg_ne_(value self, value other);
value atg_ne_scalar_out(value out, value self, value other);
value atg_ne_tensor(value self, value other);
value atg_ne_tensor_(value self, value other);
value atg_ne_tensor_out(value out, value self, value other);
value atg_neg(value self);
value atg_neg_(value self);
value atg_neg_out(value out, value self);
value atg_negative(value self);
value atg_negative_(value self);
value atg_negative_out(value out, value self);
value atg_nested_to_padded_tensor(value self, double padding, value output_size);
value atg_new_empty(value self, value size, int options_kind, int options_device);
value atg_new_empty_out(value out, value self, value size);
value atg_new_empty_strided(value self, value size, value stride, int options_kind, int options_device);
value atg_new_empty_strided_out(value out, value self, value size, value stride);
value atg_new_full(value self, value size, value fill_value, int options_kind, int options_device);
value atg_new_full_out(value out, value self, value size, value fill_value);
value atg_new_ones(value self, value size, int options_kind, int options_device);
value atg_new_ones_out(value out, value self, value size);
value atg_new_zeros(value self, value size, int options_kind, int options_device);
value atg_new_zeros_out(value out, value self, value size);
value atg_nextafter(value self, value other);
value atg_nextafter_(value self, value other);
value atg_nextafter_out(value out, value self, value other);
value atg_nll_loss(value self, value target, value weight, int64_t reduction, int64_t ignore_index);
value atg_nll_loss2d(value self, value target, value weight, int64_t reduction, int64_t ignore_index);
value atg_nll_loss2d_backward(value grad_output, value self, value target, value weight, int64_t reduction, int64_t ignore_index, value total_weight);
value atg_nll_loss2d_backward_grad_input(value grad_input, value grad_output, value self, value target, value weight, int64_t reduction, int64_t ignore_index, value total_weight);
value atg_nll_loss2d_out(value out, value self, value target, value weight, int64_t reduction, int64_t ignore_index);
value atg_nll_loss_backward(value grad_output, value self, value target, value weight, int64_t reduction, int64_t ignore_index, value total_weight);
value atg_nll_loss_backward_grad_input(value grad_input, value grad_output, value self, value target, value weight, int64_t reduction, int64_t ignore_index, value total_weight);
value atg_nll_loss_nd(value self, value target, value weight, int64_t reduction, int64_t ignore_index);
value atg_nll_loss_out(value out, value self, value target, value weight, int64_t reduction, int64_t ignore_index);
value atg_nonzero(value self);
value atg_nonzero_numpy(value self);
value atg_nonzero_out(value out, value self);
value atg_nonzero_static(value self, int64_t size, int64_t fill_value);
value atg_nonzero_static_out(value out, value self, int64_t size, int64_t fill_value);
value atg_norm(value self, value p);
value atg_norm_dtype_out(value out, value self, value p, value dim, int keepdim, int dtype);