src/bindings/torch_bindings_generated5.ml


  let stubs_nanquantile =
    foreign
      "atg_nanquantile"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_nanquantile_out =
    foreign
      "atg_nanquantile_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> int
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_nanquantile_scalar =
    foreign
      "atg_nanquantile_scalar"
      (gc_tensor
       @-> double
       @-> int64_t
       @-> int
       @-> int
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_nanquantile_scalar_out =
    foreign
      "atg_nanquantile_scalar_out"
      (gc_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> int
       @-> int
       @-> string
       @-> returning raw_tensor)
  ;;

  let stubs_nansum =
    foreign
      "atg_nansum"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_nansum_out =
    foreign
      "atg_nansum_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_narrow =
    foreign
      "atg_narrow"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_narrow_copy =
    foreign
      "atg_narrow_copy"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_narrow_copy_out =
    foreign
      "atg_narrow_copy_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_narrow_tensor =
    foreign
      "atg_narrow_tensor"
      (gc_tensor @-> int64_t @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_native_batch_norm =
    foreign
      "atg_native_batch_norm"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs_native_batch_norm_out =
    foreign
      "atg_native_batch_norm_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> double
       @-> returning void)
  ;;

  let stubs_native_channel_shuffle =
    foreign "atg_native_channel_shuffle" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_native_dropout =
    foreign
      "atg_native_dropout"
      (ptr raw_tensor @-> gc_tensor @-> double @-> int @-> returning void)
  ;;

  let stubs_native_dropout_backward =
    foreign
      "atg_native_dropout_backward"
      (gc_tensor @-> gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_native_dropout_backward_out =
    foreign
      "atg_native_dropout_backward_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs_native_dropout_out =
    foreign
      "atg_native_dropout_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> returning void)
  ;;

  let stubs_native_group_norm =
    foreign
      "atg_native_group_norm"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> double
       @-> returning void)
  ;;

  let stubs_native_group_norm_out =
    foreign
      "atg_native_group_norm_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> double
       @-> returning void)
  ;;

  let stubs_native_layer_norm =
    foreign
      "atg_native_layer_norm"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning void)
  ;;

  let stubs_native_layer_norm_out =
    foreign
      "atg_native_layer_norm_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning void)
  ;;

  let stubs_native_norm =
    foreign "atg_native_norm" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_native_norm_out =
    foreign
      "atg_native_norm_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_native_norm_scalaropt_dim_dtype =
    foreign
      "atg_native_norm_scalaropt_dim_dtype"
      (gc_tensor
       @-> scalar
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_native_norm_scalaropt_dim_dtype_out =
    foreign
      "atg_native_norm_scalaropt_dim_dtype_out"
      (gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_ne = foreign "atg_ne" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_ne_ = foreign "atg_ne_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_ne_scalar_out =
    foreign
      "atg_ne_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_ne_tensor =
    foreign "atg_ne_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ne_tensor_ =
    foreign "atg_ne_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_ne_tensor_out =
    foreign
      "atg_ne_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_neg = foreign "atg_neg" (gc_tensor @-> returning raw_tensor)
  let stubs_neg_ = foreign "atg_neg_" (gc_tensor @-> returning raw_tensor)

  let stubs_neg_out =
    foreign "atg_neg_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_negative = foreign "atg_negative" (gc_tensor @-> returning raw_tensor)
  let stubs_negative_ = foreign "atg_negative_" (gc_tensor @-> returning raw_tensor)

  let stubs_negative_out =
    foreign "atg_negative_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_nested_to_padded_tensor =
    foreign
      "atg_nested_to_padded_tensor"
      (gc_tensor @-> double @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_new_empty =
    foreign
      "atg_new_empty"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_new_empty_out =
    foreign
      "atg_new_empty_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_new_empty_strided =
    foreign
      "atg_new_empty_strided"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_new_empty_strided_out =
    foreign
      "atg_new_empty_strided_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_new_full =
    foreign
      "atg_new_full"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> scalar
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_new_full_out =
    foreign
      "atg_new_full_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_new_ones =
    foreign
      "atg_new_ones"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_new_ones_out =
    foreign
      "atg_new_ones_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_new_zeros =
    foreign
      "atg_new_zeros"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_new_zeros_out =
    foreign
      "atg_new_zeros_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_nextafter =
    foreign "atg_nextafter" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_nextafter_ =
    foreign "atg_nextafter_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_nextafter_out =
    foreign
      "atg_nextafter_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_nll_loss =
    foreign
      "atg_nll_loss"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_nll_loss2d =
    foreign
      "atg_nll_loss2d"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_nll_loss2d_backward =
    foreign
      "atg_nll_loss2d_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_nll_loss2d_backward_grad_input =
    foreign
      "atg_nll_loss2d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_nll_loss2d_out =
    foreign
      "atg_nll_loss2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_nll_loss_backward =
    foreign
      "atg_nll_loss_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_nll_loss_backward_grad_input =
    foreign
      "atg_nll_loss_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_nll_loss_nd =
    foreign
      "atg_nll_loss_nd"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_nll_loss_out =
    foreign
      "atg_nll_loss_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_nonzero = foreign "atg_nonzero" (gc_tensor @-> returning raw_tensor)

  let stubs_nonzero_numpy =
    foreign "atg_nonzero_numpy" (gc_tensor @-> returning (ptr raw_tensor))
  ;;

  let stubs_nonzero_out =
    foreign "atg_nonzero_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_nonzero_static =
    foreign
      "atg_nonzero_static"
      (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_nonzero_static_out =
    foreign
      "atg_nonzero_static_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_norm = foreign "atg_norm" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_norm_dtype_out =
    foreign
      "atg_norm_dtype_out"
      (gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;
